simplified new syntax interpreter